# open_cv

./: CMakeLists.txt  main.cpp  main.hpp  tutorial.cpp  tutorial1.cpp  tutorial10.cpp  tutorial11.cpp  tutorial12.cpp  tutorial13.cpp  tutorial14.cpp  tutorial15.cpp  tutorial16.cpp  tutorial17.cpp  tutorial18.cpp  tutorial19.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp  tutorial8.cpp  tutorial9.cpp  tutorials.hpp
